--- a/resto.html
+++ b/resto.html
@@ -320,6 +320,10 @@
 <!-- LOADING SCREEN -->
 <div class="loading-screen" id="loading-screen">
   <div class="loading-inner">
+    <div class="loading-logo">
+      <!-- Insertion image wanted -->
+      <img src="imag/wanted.png" alt="Logo wanted">
+      </div>
     <div class="loading-title">BRASSAGE EN COURS</div>
     <div class="loading-logo">LES 3 BRASSEURS – SESSION SPÉCIALE</div>
 
