--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
   <div class="loading-inner">
     <div class="loading-logo">
       <!-- Insertion image wanted -->
-      <img src="img/wanted.PNG" alt="Logo wanted">
+      <img src="img/wanted.png" alt="Logo wanted">
       </div>
     <div class="loading-title">BRASSAGE EN COURS</div>
     <div class="loading-logo">LES 3 BRASSEURS – SESSION SPÉCIALE</div>
