--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
   const footerEl = document.getElementById("footer");
   const skipBtn = document.getElementById("skip-btn");
 
-  const storyText =
+  const storyText =`
 > BRASSAGE INITIALISÉ
 > SESSION : 3_BRASSEURS_EVENT
 > ÉTAT : ACTIVÉ
