--- a/index.html
+++ b/index.html
@@ -313,6 +313,14 @@
       color: var(--primary);
       box-shadow: 0 0 12px rgba(201, 168, 106, 0.5);
     }
+
+    .loading-inner img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 8px; /* Optionnel */
+}
   </style>
 </head>
 <body>
