--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
       --bg: #1a1f16;
       --bg-alt: #141912;
       --panel: #262b21;
-      --panel-soft: #2e3428;
       --primary: #c9a86a;
-      --primary-soft: rgba(201, 168, 106, 0.35);
+      --primary-soft: rgba(201,168,106,0.35);
       --accent: #9a2e2f;
-      --accent-soft: rgba(154, 46, 47, 0.25);
       --text: #f3e9d2;
       --muted: #c7bca3;
       --mono: "JetBrains Mono", monospace;
@@ -30,7 +28,6 @@
       overflow-x: hidden;
     }
 
-    /* Scanline */
     body::before {
       content: "";
       position: fixed;
@@ -38,51 +35,49 @@
       pointer-events: none;
       background: repeating-linear-gradient(
         to bottom,
-        rgba(255, 255, 255, 0.015) 0px,
-        rgba(255, 255, 255, 0.015) 1px,
+        rgba(255,255,255,0.015) 0px,
+        rgba(255,255,255,0.015) 1px,
         transparent 2px,
         transparent 4px
       );
-      opacity: 0.5;
+      opacity: .5;
       mix-blend-mode: soft-light;
       z-index: 5;
     }
 
     @keyframes soft-glitch {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-1px); }
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-1px) brightness(1.02); }
     }
 
-    /* LOADING SCREEN */
+    /* LOADING */
     .loading-screen {
       position: fixed;
       inset: 0;
       background: radial-gradient(circle at top, #1a1f16 0, #0e0f0c 70%);
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-      z-index: 20;
+      align-items: center;
+      flex-direction: column;
       animation: soft-glitch 6s infinite ease-in-out alternate;
+      z-index: 20;
     }
 
     .loading-inner {
-      text-align: center;
       max-width: 500px; /* élargi */
+      text-align: center;
       padding: 32px 24px;
       border-radius: 18px;
-      border: 1px solid rgba(199, 188, 163, 0.5);
+      border: 1px solid rgba(199,188,163,0.5);
       background:
-        radial-gradient(circle at top, rgba(201, 168, 106, 0.1), transparent 60%),
-        radial-gradient(circle at bottom, rgba(26, 31, 22, 0.95), rgba(20, 25, 18, 0.98));
-      box-shadow:
-        0 0 30px rgba(26, 31, 22, 0.9),
-        0 0 50px rgba(201, 168, 106, 0.25);
+        radial-gradient(circle at top, rgba(201,168,106,0.1), transparent 60%),
+        radial-gradient(circle at bottom, rgba(26,31,22,0.95), rgba(20,25,18,0.98));
+      box-shadow: 0 0 30px rgba(26,31,22,0.9), 0 0 50px rgba(201,168,106,0.25);
     }
 
-    /* IMAGE WANTED – REDIMENSIONNÉE */
+    /* IMAGE FIX */
     .loading-inner img {
-      max-width: 85%;   /* image réduite proprement */
+      max-width: 85%; /* réduit proprement */
       height: auto;
       display: block;
       margin: 0 auto 20px auto;
@@ -91,16 +86,16 @@
 
     .loading-title {
       font-family: var(--mono);
-      font-size: 0.85rem;
-      letter-spacing: 0.25em;
+      font-size: .85rem;
+      letter-spacing: .25em;
       color: var(--muted);
       margin-bottom: 16px;
     }
 
     .loading-logo {
       font-family: var(--mono);
-      font-size: 0.75rem;
-      letter-spacing: 0.22em;
+      font-size: .75rem;
+      letter-spacing: .22em;
       color: var(--primary);
       margin-bottom: 22px;
     }
@@ -108,52 +103,80 @@
     .loading-bar {
       width: 100%;
       height: 7px;
+      background: rgba(26,31,22,0.8);
       border-radius: 999px;
-      background: rgba(26, 31, 22, 0.8);
-      border: 1px solid rgba(199, 188, 163, 0.4);
-      margin-bottom: 10px;
+      border: 1px solid rgba(199,188,163,0.4);
       overflow: hidden;
+      margin-bottom: 10px;
     }
 
     .loading-bar-fill {
       height: 100%;
       width: 0%;
       background: linear-gradient(90deg, var(--primary), #d8b470, #c89a3c);
-      transition: width 0.15s linear;
+      transition: width .15s linear;
     }
 
-    /* MAIN */
     .shell {
+      max-width: 880px;
+      margin: 72px auto 56px;
+      padding: 0 20px 72px;
       opacity: 0;
       transform: translateY(20px);
-      transition: opacity 0.7s ease-out, transform 0.7s ease-out;
-      max-width: 880px;
-      margin: 72px auto;
-      padding: 0 20px 72px;
+      transition: opacity 0.7s, transform 0.7s;
     }
 
     .shell.visible {
       opacity: 1;
       transform: translateY(0);
     }
+
+    .panel {
+      width: 100%;
+      border-radius: 18px;
+      border: 1px solid rgba(199,188,163,0.5);
+      background: #1a1f16;
+      box-shadow: 0 0 40px rgba(26,31,22,1), 0 24px 80px rgba(0,0,0,0.9);
+    }
+
+    .panel-inner {
+      padding: 26px 24px;
+    }
+
+    .story {
+      font-size: 1rem;
+      line-height: 1.7;
+      white-space: pre-wrap;
+      min-height: 150px;
+    }
+
+    .cursor {
+      display: inline-block;
+      width: 8px;
+      height: 1.1em;
+      background: var(--primary);
+      animation: blink 1s steps(2,start) infinite;
+    }
+
+    @keyframes blink {
+      0%,49% { opacity: 1; }
+      50%,100% { opacity: 0; }
+    }
   </style>
 </head>
 
 <body>
 
-<!-- LOADING SCREEN -->
+<!-- LOADING -->
 <div class="loading-screen" id="loading-screen">
   <div class="loading-inner">
-    
-    <img src="img/wanted.png" alt="Wanted Williams">
+
+    <img src="img/wanted.png" alt="Wanted">
 
     <div class="loading-title">BRASSAGE EN COURS</div>
     <div class="loading-logo">LES 3 BRASSEURS – SESSION SPÉCIALE</div>
 
-    <div class="loading-main">
-      Préparation de <span>l'Évènement</span>…<br>
-      Mise en place de la mission.
-    </div>
+    <div>Préparation de <span>l'Évènement</span>…<br>Mise en place de la mission.</div>
 
     <div class="loading-bar">
       <div class="loading-bar-fill" id="loading-fill"></div>
@@ -164,6 +187,7 @@
     <div class="loading-hint">
       Saviez-vous que la meilleure idée cadeau… se trouve souvent au fond d’une pinte ? 🍺
     </div>
+
   </div>
 </div>
 
@@ -176,12 +200,36 @@
         <span id="story-text"></span><span id="cursor" class="cursor"></span>
       </div>
 
+      <div class="mission-panel" id="mission-panel" style="display:none;">
+        <div class="mission-title">PARAMÈTRES DE LA MISSION</div>
+        <ul class="mission-list">
+          <li>▸ Apporter un cadeau d’environ <strong>10 €</strong></li>
+          <li>▸ Aucun thème imposé</li>
+          <li>▸ Un cadeau qui “mérite une bière pour s’en remettre” 🍺</li>
+          <li>▸ Une petite rivalité brassicole peut apparaître</li>
+        </ul>
+      </div>
+
+      <div class="tagline" id="tagline" style="display:none;">
+        Une soirée où chaque cadeau devient une dégustation… et chaque choix, un pari.
+      </div>
+
+      <div class="footer" id="footer" style="display:none;">
+        <div class="footer-main">LES 3 BRASSEURS</div>
+        <div class="footer-sub">BRASSER · PARTAGER · JOUER</div>
+      </div>
+
+      <div class="controls">
+        <button class="btn-skip" id="skip-btn">AFFICHER TOUT</button>
+      </div>
+
     </div>
   </section>
 </main>
 
+
 <script>
-  /* LOADING */
+  /* LOADER */
   const loadingScreen = document.getElementById("loading-screen");
   const loadingFill = document.getElementById("loading-fill");
   const loadingPercent = document.getElementById("loading-percent");
@@ -189,11 +237,11 @@
 
   let loadValue = 0;
   const loadInterval = setInterval(() => {
-    loadValue += Math.floor(Math.random() * 12) + 4;
+    loadValue += Math.floor(Math.random()*12)+4;
     if (loadValue > 100) loadValue = 100;
 
-    loadingFill.style.width = loadValue + "%";
-    loadingPercent.textContent = loadValue + "%";
+    loadingFill.style.width = loadValue+"%";
+    loadingPercent.textContent = loadValue+"%";
 
     if (loadValue >= 100) {
       clearInterval(loadInterval);
@@ -203,10 +251,64 @@
         setTimeout(() => {
           loadingScreen.style.display = "none";
           shell.classList.add("visible");
-        }, 600);
-      }, 300);
+          startTypewriter();
+        }, 650);
+      }, 400);
     }
   }, 180);
+
+  /* TYPEWRITER FIX */
+  const storyEl = document.getElementById("story-text");
+  const cursorEl = document.getElementById("cursor");
+  const missionPanel = document.getElementById("mission-panel");
+  const taglineEl = document.getElementById("tagline");
+  const footerEl = document.getElementById("footer");
+  const skipBtn = document.getElementById("skip-btn");
+
+  const storyText = `> BRASSAGE INITIALISÉ
+> SESSION : 3_BRASSEURS_EVENT
+> ÉTAT : ACTIVÉ
+
+Hello Hello.
+
+Ce soir, la brasserie ne sert pas seulement des bières.
+Elle ouvre une nouvelle tradition.
+
+Un jeu.
+Un rituel.
+Une expérience pensée pour mettre l'ambiance autour de la table.
+
+Préparez-vous.
+
+Car avant de trinquer... il faudra jouer.`;
+
+
+  let charIndex = 0;
+  let typeInterval = null;
+
+  function startTypewriter() {
+    typeInterval = setInterval(() => {
+      if (charIndex < storyText.length) {
+        storyEl.textContent += storyText.charAt(charIndex);
+        charIndex++;
+      } else {
+        clearInterval(typeInterval);
+        cursorEl.style.display = "none";
+        missionPanel.style.display = "block";
+        setTimeout(()=>taglineEl.style.display="block",300);
+        setTimeout(()=>footerEl.style.display="block",600);
+      }
+    }, 26);
+  }
+
+  skipBtn.addEventListener("click", () => {
+    clearInterval(typeInterval);
+    storyEl.textContent = storyText;
+    cursorEl.style.display = "none";
+    missionPanel.style.display = "block";
+    taglineEl.style.display = "block";
+    footerEl.style.display = "block";
+  });
 </script>
 
 </body>
