--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div id="loading-percent">0%</div>
 
     <div class="loading-hint">
-      Saviez-vous que la meilleure idée cadeau… se trouve souvent au fond d’une pinte ? 🍺
+      Le meilleur moyen de se dire aurevoir n'est-il pas autour d'un bon repas ? Bien gras lol 🍺
     </div>
 
   </div>
