--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
 
   <style>
     :root {
-      --bg: #1a1f16;
-      --bg-alt: #141912;
+      /* Palette inspirée des 3 Brasseurs */
+      --bg: #1a1f16;                /* Vert bouteille très sombre */
+      --bg-alt: #141912;           
       --panel: #262b21;
-      --primary: #c9a86a;
-      --primary-soft: rgba(201,168,106,0.35);
-      --accent: #9a2e2f;
-      --text: #f3e9d2;
+      --panel-soft: #2e3428;
+      --primary: #c9a86a;           /* Doré bière / malt */
+      --primary-soft: rgba(201, 168, 106, 0.35);
+      --accent: #9a2e2f;            /* Rouge vintage brasserie */
+      --accent-soft: rgba(154, 46, 47, 0.25);
+      --text: #f3e9d2;              /* Beige clair */
       --muted: #c7bca3;
       --mono: "JetBrains Mono", monospace;
       --sans: system-ui, sans-serif;
+    }
+
+    * {
+      box-sizing: border-box;
     }
 
     body {
@@ -28,6 +35,7 @@
       overflow-x: hidden;
     }
 
+    /* Effet scanline atténué */
     body::before {
       content: "";
       position: fixed;
@@ -35,78 +43,82 @@
       pointer-events: none;
       background: repeating-linear-gradient(
         to bottom,
-        rgba(255,255,255,0.015) 0px,
-        rgba(255,255,255,0.015) 1px,
+        rgba(255, 255, 255, 0.015) 0px,
+        rgba(255, 255, 255, 0.015) 1px,
         transparent 2px,
         transparent 4px
       );
-      opacity: .5;
+      opacity: 0.5;
       mix-blend-mode: soft-light;
       z-index: 5;
     }
 
+    /* Soft glitch très subtil */
     @keyframes soft-glitch {
-      0%,100% { transform: translateY(0); }
+      0%, 100% { transform: translateY(0); filter: none; }
       50% { transform: translateY(-1px) brightness(1.02); }
     }
 
-    /* LOADING */
+    /* LOADING SCREEN */
     .loading-screen {
       position: fixed;
       inset: 0;
       background: radial-gradient(circle at top, #1a1f16 0, #0e0f0c 70%);
       display: flex;
-      justify-content: center;
-      align-items: center;
       flex-direction: column;
-      animation: soft-glitch 6s infinite ease-in-out alternate;
+      align-items: center;
+      justify-content: center;
       z-index: 20;
+      color: var(--text);
+      animation: soft-glitch 6s infinite ease-in-out alternate;
     }
 
     .loading-inner {
-      max-width: 500px; /* élargi */
       text-align: center;
+      max-width: 420px;
       padding: 32px 24px;
       border-radius: 18px;
-      border: 1px solid rgba(199,188,163,0.5);
+      border: 1px solid rgba(199, 188, 163, 0.5);
       background:
-        radial-gradient(circle at top, rgba(201,168,106,0.1), transparent 60%),
-        radial-gradient(circle at bottom, rgba(26,31,22,0.95), rgba(20,25,18,0.98));
-      box-shadow: 0 0 30px rgba(26,31,22,0.9), 0 0 50px rgba(201,168,106,0.25);
-    }
-
-    /* IMAGE FIX */
-    .loading-inner img {
-      max-width: 85%; /* réduit proprement */
-      height: auto;
-      display: block;
-      margin: 0 auto 20px auto;
-      border-radius: 6px;
+        radial-gradient(circle at top, rgba(201, 168, 106, 0.1), transparent 60%),
+        radial-gradient(circle at bottom, rgba(26, 31, 22, 0.95), rgba(20, 25, 18, 0.98));
+      box-shadow:
+        0 0 30px rgba(26, 31, 22, 0.9),
+        0 0 50px rgba(201, 168, 106, 0.25);
+      position: relative;
+      overflow: hidden;
     }
 
     .loading-title {
       font-family: var(--mono);
-      font-size: .85rem;
-      letter-spacing: .25em;
+      font-size: 0.85rem;
+      letter-spacing: 0.25em;
+      text-transform: uppercase;
       color: var(--muted);
       margin-bottom: 16px;
     }
 
     .loading-logo {
       font-family: var(--mono);
-      font-size: .75rem;
-      letter-spacing: .22em;
+      font-size: 0.75rem;
+      letter-spacing: 0.22em;
+      text-transform: uppercase;
       color: var(--primary);
       margin-bottom: 22px;
+    }
+
+    .loading-main span {
+      color: var(--primary);
+      font-weight: bold;
     }
 
     .loading-bar {
       width: 100%;
       height: 7px;
-      background: rgba(26,31,22,0.8);
       border-radius: 999px;
-      border: 1px solid rgba(199,188,163,0.4);
+      background: rgba(26, 31, 22, 0.8);
       overflow: hidden;
+      border: 1px solid rgba(199, 188, 163, 0.4);
       margin-bottom: 10px;
     }
 
@@ -114,16 +126,28 @@
       height: 100%;
       width: 0%;
       background: linear-gradient(90deg, var(--primary), #d8b470, #c89a3c);
-      transition: width .15s linear;
+      box-shadow: 0 0 18px rgba(201, 168, 106, 0.7);
+      transition: width 0.15s linear;
     }
 
+    .loading-hint {
+      margin-top: 18px;
+      font-size: 0.78rem;
+      color: var(--muted);
+      font-style: italic;
+    }
+
+    /* MAIN CONTENT */
     .shell {
+      position: relative;
       max-width: 880px;
       margin: 72px auto 56px;
       padding: 0 20px 72px;
+      display: flex;
+      justify-content: center;
       opacity: 0;
       transform: translateY(20px);
-      transition: opacity 0.7s, transform 0.7s;
+      transition: opacity 0.7s ease-out, transform 0.7s ease-out;
     }
 
     .shell.visible {
@@ -134,13 +158,76 @@
     .panel {
       width: 100%;
       border-radius: 18px;
-      border: 1px solid rgba(199,188,163,0.5);
-      background: #1a1f16;
-      box-shadow: 0 0 40px rgba(26,31,22,1), 0 24px 80px rgba(0,0,0,0.9);
+      border: 1px solid rgba(199, 188, 163, 0.5);
+      background:
+        radial-gradient(circle at top left, rgba(26, 31, 22, 0.97), rgba(26, 31, 22, 1)),
+        linear-gradient(145deg, rgba(26, 31, 22, 1), rgba(26, 31, 22, 0.9));
+      box-shadow:
+        0 0 40px rgba(26, 31, 22, 1),
+        0 24px 80px rgba(0, 0, 0, 0.9);
+      position: relative;
+      overflow: hidden;
     }
 
     .panel-inner {
-      padding: 26px 24px;
+      padding: 26px 24px 24px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .hud-header {
+      display: flex;
+      justify-content: space-between;
+      font-family: var(--mono);
+      font-size: 0.72rem;
+      letter-spacing: 0.18em;
+      color: var(--muted);
+      margin-bottom: 8px;
+    }
+
+    .hud-pill {
+      padding: 4px 9px;
+      border-radius: 999px;
+      border: 1px solid rgba(199, 188, 163, 0.6);
+      background: rgba(26, 31, 22, 0.86);
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+    }
+
+    .hud-dot {
+      width: 7px;
+      height: 7px;
+      border-radius: 50%;
+      background: radial-gradient(circle, #c9a86a, #9a844e);
+      animation: pulse 2.5s infinite ease-in-out;
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.15); opacity: 1; }
+    }
+
+    .title-main {
+      text-align: center;
+      font-family: var(--mono);
+      font-size: 1rem;
+      letter-spacing: 0.25em;
+      color: var(--primary);
+    }
+
+    .title-sub {
+      text-align: center;
+      color: var(--muted);
+      margin-top: 6px;
+    }
+
+    .separator {
+      width: 100%;
+      height: 1px;
+      margin: 20px 0;
+      background: linear-gradient(to right, transparent, var(--primary), transparent);
+      opacity: 0.6;
     }
 
     .story {
@@ -155,28 +242,104 @@
       width: 8px;
       height: 1.1em;
       background: var(--primary);
-      animation: blink 1s steps(2,start) infinite;
+      animation: blink 1s steps(2, start) infinite;
     }
 
     @keyframes blink {
-      0%,49% { opacity: 1; }
-      50%,100% { opacity: 0; }
+      0%, 49% { opacity: 1; }
+      50%, 100% { opacity: 0; }
+    }
+
+    /* Image au milieu de l'histoire */
+    .mid-image-container {
+      text-align: center;
+      margin: 24px 0 18px;
+    }
+
+    .mid-image-container img {
+      max-width: 70%;
+      height: auto;
+      border-radius: 12px;
+      box-shadow: 0 0 28px rgba(0, 0, 0, 0.7);
+    }
+
+    .mission-panel {
+      margin-top: 22px;
+      padding: 15px 14px 12px;
+      border-radius: 14px;
+      background: linear-gradient(135deg, rgba(26, 31, 22, 0.95), rgba(26, 31, 22, 0.98));
+      border: 1px solid var(--primary-soft);
+      box-shadow: 0 0 24px rgba(201, 168, 106, 0.22);
+    }
+
+    .mission-title {
+      font-family: var(--mono);
+      font-size: 0.78rem;
+      letter-spacing: 0.22em;
+      color: var(--primary);
+      margin-bottom: 8px;
+    }
+
+    .mission-bullet {
+      color: var(--accent);
+    }
+
+    .tagline {
+      margin-top: 10px;
+      font-style: italic;
+      text-align: center;
+      color: var(--muted);
+    }
+
+    .footer {
+      margin-top: 20px;
+      text-align: center;
+      font-family: var(--mono);
+      font-size: 0.78rem;
+      color: var(--muted);
+    }
+
+    .footer-main {
+      color: var(--primary);
+      margin-bottom: 4px;
+    }
+
+    .controls {
+      margin-top: 16px;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .btn-skip {
+      font-family: var(--mono);
+      font-size: 0.76rem;
+      color: var(--muted);
+      background: transparent;
+      border-radius: 999px;
+      border: 1px solid rgba(199, 188, 163, 0.6);
+      padding: 6px 14px;
+      cursor: pointer;
+    }
+
+    .btn-skip:hover {
+      border-color: var(--primary);
+      color: var(--primary);
+      box-shadow: 0 0 12px rgba(201, 168, 106, 0.5);
     }
   </style>
 </head>
-
 <body>
 
-<!-- LOADING -->
+<!-- LOADING SCREEN -->
 <div class="loading-screen" id="loading-screen">
   <div class="loading-inner">
-
-    <img src="img/wanted.png" alt="Wanted">
-
     <div class="loading-title">BRASSAGE EN COURS</div>
     <div class="loading-logo">LES 3 BRASSEURS – SESSION SPÉCIALE</div>
 
-    <div>Préparation de <span>l'Évènement</span>…<br>Mise en place de la mission.</div>
+    <div class="loading-main">
+      Préparation de <span>l'Évènement</span>…<br>
+      Mise en place de la mission.
+    </div>
 
     <div class="loading-bar">
       <div class="loading-bar-fill" id="loading-fill"></div>
@@ -184,10 +347,7 @@
 
     <div id="loading-percent">0%</div>
 
-    <div class="loading-hint">
-      Le meilleur moyen de se dire aurevoir n'est-il pas autour d'un bon repas ? Bien gras lol 🍺
-    </div>
-
+    <div class="loading-hint">Saviez-vous que la meilleure idée cadeau… se trouve souvent au fond d’une pinte ? 🍺</div>
   </div>
 </div>
 
@@ -196,17 +356,39 @@
   <section class="panel">
     <div class="panel-inner">
 
+      <header class="hud-header">
+        <div class="hud-pill">
+          <span class="hud-dot"></span>
+          <span>SESSION ÉVÈNEMENT • 3 BRASSEURS</span>
+        </div>
+        <div>ÉDITION 2025</div>
+      </header>
+
+      <div class="title-main">LES 3 BRASSEURS</div>
+      <div class="title-sub">ÉVÈNEMENT SPÉCIAL – MISSION D’OUVERTURE</div>
+
+      <div class="separator"></div>
+
       <div class="story">
-        <span id="story-text"></span><span id="cursor" class="cursor"></span>
+        <span id="story-top"></span>
+
+        <!-- Image qui apparaît entre la partie "technique" et "Bienvenue à vous." -->
+        <div id="mid-image-container" class="mid-image-container" style="display:none;">
+          <!-- Change le src si tu veux une autre image -->
+          <img src="img/3brasseurs.png" alt="Les 3 Brasseurs">
+        </div>
+
+        <span id="story-bottom"></span>
+        <span id="cursor" class="cursor"></span>
       </div>
 
       <div class="mission-panel" id="mission-panel" style="display:none;">
         <div class="mission-title">PARAMÈTRES DE LA MISSION</div>
         <ul class="mission-list">
-          <li>▸ Apporter un cadeau d’environ <strong>10 €</strong></li>
-          <li>▸ Aucun thème imposé</li>
-          <li>▸ Un cadeau qui “mérite une bière pour s’en remettre” 🍺</li>
-          <li>▸ Une petite rivalité brassicole peut apparaître</li>
+          <li><span class="mission-bullet">▸</span> Apporter un cadeau d’environ <strong>10 €</strong></li>
+          <li><span class="mission-bullet">▸</span> Aucun thème imposé</li>
+          <li><span class="mission-bullet">▸</span> Un cadeau qui “mérite une bière pour s’en remettre” 🍺</li>
+          <li><span class="mission-bullet">▸</span> Et qui pourrait susciter… une *petite rivalité brassicole*</li>
         </ul>
       </div>
 
@@ -227,9 +409,8 @@
   </section>
 </main>
 
-
 <script>
-  /* LOADER */
+  /* Loading animation */
   const loadingScreen = document.getElementById("loading-screen");
   const loadingFill = document.getElementById("loading-fill");
   const loadingPercent = document.getElementById("loading-percent");
@@ -237,17 +418,17 @@
 
   let loadValue = 0;
   const loadInterval = setInterval(() => {
-    loadValue += Math.floor(Math.random()*12)+4;
+    loadValue += Math.floor(Math.random() * 12) + 4;
     if (loadValue > 100) loadValue = 100;
 
-    loadingFill.style.width = loadValue+"%";
-    loadingPercent.textContent = loadValue+"%";
+    loadingFill.style.width = loadValue + "%";
+    loadingPercent.textContent = loadValue + "%";
 
     if (loadValue >= 100) {
       clearInterval(loadInterval);
       setTimeout(() => {
         loadingScreen.style.opacity = "0";
-        loadingScreen.style.transition = "opacity 0.6s";
+        loadingScreen.style.transition = "opacity 0.6s ease-out";
         setTimeout(() => {
           loadingScreen.style.display = "none";
           shell.classList.add("visible");
@@ -255,21 +436,24 @@
         }, 650);
       }, 400);
     }
-  }, 180);
+  }, 300); // <- tu peux ajuster ici la vitesse globale du chargement
 
-  /* TYPEWRITER FIX */
-  const storyEl = document.getElementById("story-text");
+  /* Typewriter */
+  const storyTopEl = document.getElementById("story-top");
+  const storyBottomEl = document.getElementById("story-bottom");
+  const midImageContainer = document.getElementById("mid-image-container");
   const cursorEl = document.getElementById("cursor");
   const missionPanel = document.getElementById("mission-panel");
   const taglineEl = document.getElementById("tagline");
   const footerEl = document.getElementById("footer");
   const skipBtn = document.getElementById("skip-btn");
 
-  const storyText = `> BRASSAGE INITIALISÉ
+  const storyText =
+`> BRASSAGE INITIALISÉ
 > SESSION : 3_BRASSEURS_EVENT
 > ÉTAT : ACTIVÉ
 
-Hello Hello.
+Bienvenue à vous.
 
 Ce soir, la brasserie ne sert pas seulement des bières.
 Elle ouvre une nouvelle tradition.
@@ -282,28 +466,44 @@ Préparez-vous.
 
 Car avant de trinquer... il faudra jouer.`;
 
-
+  // On veut que l'image apparaisse juste avant "Bienvenue à vous."
+  const splitIndex = storyText.indexOf("Bienvenue à vous.");
   let charIndex = 0;
   let typeInterval = null;
 
   function startTypewriter() {
     typeInterval = setInterval(() => {
       if (charIndex < storyText.length) {
-        storyEl.textContent += storyText.charAt(charIndex);
+        const currentChar = storyText.charAt(charIndex);
+
+        if (charIndex < splitIndex) {
+          // Première partie (technique)
+          storyTopEl.textContent += currentChar;
+        } else {
+          // On révèle l'image au moment où commence "Bienvenue à vous."
+          if (charIndex === splitIndex) {
+            midImageContainer.style.display = "block";
+          }
+          storyBottomEl.textContent += currentChar;
+        }
+
         charIndex++;
       } else {
         clearInterval(typeInterval);
         cursorEl.style.display = "none";
         missionPanel.style.display = "block";
-        setTimeout(()=>taglineEl.style.display="block",300);
-        setTimeout(()=>footerEl.style.display="block",600);
+        setTimeout(() => taglineEl.style.display = "block", 300);
+        setTimeout(() => footerEl.style.display = "block", 600);
       }
     }, 26);
   }
 
   skipBtn.addEventListener("click", () => {
     clearInterval(typeInterval);
-    storyEl.textContent = storyText;
+    // On remplit directement les deux parties + l'image
+    storyTopEl.textContent = storyText.slice(0, splitIndex);
+    storyBottomEl.textContent = storyText.slice(splitIndex);
+    midImageContainer.style.display = "block";
     cursorEl.style.display = "none";
     missionPanel.style.display = "block";
     taglineEl.style.display = "block";
