--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     /* Image WANTED dans le loader */
     .loading-wanted img {
-      max-width: 100%;
+      max-width: 70%;
       height: auto;
       display: block;
       margin: 0 auto 18px;
@@ -471,6 +471,10 @@ Les votes ont tranché, je vous proposer une petite virée aux 3 brasseurs le je
 Il fait froid, aucune excuse pour ne pas manger gras !!!!!
 
 PS : Je remercie François pour le support et les idées. #copyright sans demander #pas original`;
+  <div id="mid-image-container" class="mid-image-container" style="display:none;">
+  <img src="img/3brasseurs.png" alt="Les 3 Brasseurs">
+</div>
+
 
   // Index où commence la partie "Bienvenue à vous."
   const splitIndex = storyText.indexOf("Bienvenue à vous.");
