--- a/index.html
+++ b/index.html
@@ -466,18 +466,14 @@ Hello tout le monde.
 
 Il est venu le temps de fêter mon départ, pour votre plus grand plaisir je pense :P
 
-Les votes ont tranché, je vous proposer une petite virée aux 3 brasseurs le jeudi 27/11 à 12h00.
+Les votes ont tranché, je vous propose une petite virée aux 3 brasseurs le jeudi 27/11 à 12h00.
 
 Il fait froid, aucune excuse pour ne pas manger gras !!!!!
 
 PS : Je remercie François pour le support et les idées. #copyright sans demander #pas original`;
-  <div id="mid-image-container" class="mid-image-container" style="display:none;">
-  <img src="img/3brasseurs.png" alt="Les 3 Brasseurs">
-</div>
-
 
   // Index où commence la partie "Bienvenue à vous."
-  const splitIndex = storyText.indexOf("Bienvenue à vous.");
+  const splitIndex = storyText.indexOf("Les votes ont tranché");
 
   let charIndex = 0;
   let typeInterval = null;
