--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         }, 650);
       }, 400);
     }
-  }, 300); // vitesse de la barre
+  }, 800); // vitesse de la barre
 
   /* Typewriter */
   const storyTopEl = document.getElementById("story-top");
@@ -473,7 +473,7 @@ Il fait froid, aucune excuse pour ne pas manger gras !!!!!
 PS : Je remercie François pour le support et les idées. #copyright sans demander #pas original`;
 
   // Index où commence la partie "Bienvenue à vous."
-  const splitIndex = storyText.indexOf("Les votes ont tranché");
+  const splitIndex = storyText.indexOf("Hello tout le monde");
 
   let charIndex = 0;
   let typeInterval = null;
