--- a/index.html
+++ b/index.html
@@ -401,13 +401,9 @@
         </ul>
       </div>
 
-      <div class="tagline" id="tagline" style="display:none;">
-        Une soirée où chaque cadeau devient une dégustation… et chaque choix, un pari.
-      </div>
-
       <div class="footer" id="footer" style="display:none;">
         <div class="footer-main">LES 3 BRASSEURS</div>
-        <div class="footer-sub">BRASSER · PARTAGER · JOUER</div>
+        <div class="footer-sub">BRASSER · PARTAGER · MANGER</div>
       </div>
 
       <div class="controls">
@@ -445,7 +441,7 @@
         }, 650);
       }, 400);
     }
-  }, 1000); // vitesse de la barre
+  }, 500); // vitesse de la barre
 
   /* Typewriter */
   const storyTopEl = document.getElementById("story-top");
